<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.app.unfit20.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/actionHomeFragmentToPostDetailFragment"
            app:destination="@id/postDetailFragment" />
        <action
            android:id="@+id/actionHomeFragmentToCreatePostFragment"
            app:destination="@id/createPostFragment" />
        <action
            android:id="@+id/actionHomeFragmentToProfileFragment"
            app:destination="@id/profileFragment">
            <argument
                android:name="userId"
                app:argType="string"
                app:nullable="true"
                android:defaultValue="@null" />
        </action>
        <action
            android:id="@+id/actionHomeFragmentToMarketplaceFragment"
            app:destination="@id/marketplaceFragment" />
    </fragment>

    <fragment
        android:id="@+id/marketplaceFragment"
        android:name="com.app.unfit20.ui.marketplace.MarketplaceFragment"
        android:label="@string/menu_marketplace"
        tools:layout="@layout/fragment_marketplace" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.app.unfit20.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile">
        <argument
            android:name="userId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/postDetailFragment"
        android:name="com.app.unfit20.ui.post.PostDetailFragment"
        android:label="@string/title_post_detail"
        tools:layout="@layout/fragment_post_detail">
        <argument
            android:name="postId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/createPostFragment"
        android:name="com.app.unfit20.ui.post.CreatePostFragment"
        android:label="@string/title_create_post"
        tools:layout="@layout/fragment_create_post" />

</navigation>